cluster api: add bundle methods
